--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
     <header>
-        <center> <img src="ucrania3.jpg" id="imagemcabecalho"> </center>
+        
     </header>
+    <center> <img src="ucrania3.jpg" id="imagemcabecalho"> </center>
     <h1> 24/02/2022</h1>
     <p> Após meses de ameaças e posicionamento de soldados na fronteira ucraniana, a <b id="russia">Rússia</b> decidiu invadir a <b id="ucrania">Ucrânia</b>.</p>
     <p> Nas primeiras horas de 24 de fevereiro, <b id="russia">Vladimir Putin</b> anunciou a operação militar que, desde então, se tornou um dos maiores conflitos militares na Europa desde a Segunda Guerra Mundial, desencadeando a maior crise de segurança no continente desde a Guerra Fria.</p>
     <p> O conflito ainda não tem uma previsão de terminar, já que sucessivos encontros entre representantes dos dois países fracassaram, até o momento, em garantir um cessar-fogo definitivo.</p>
-
 
     <hr>
     <h1> Desespero de famílias comovem o mundo</h1>
@@ -34,6 +34,10 @@
     <hr>
     <p style="text-align: left;"><img src="favicon.ico" id="waru"> waRU: war(guerra) R(Rússia) U(Ucrânia)</p> 
   <p>  by:Luiz Fernando Cardoso De Araújo Filho.</p> <p>Colégio Cívico-Militar Cecília Meireles</p>
+  Deixe seu comentário:
+  <input type="text" placeholder="Comentário">
+  <br></br>
+  <button>Enviar comentário</button>
 
 </footer>
 </body>
